# sqpnp

./: CMakeLists.txt
examples/: main.cpp  main_plain.cpp
examples/robust/: main.cpp  robust_pose_pnp.h
python/: CMakeLists.txt  setup.py.in
python/sqpnp_python/: __init__.py  sqpnp_python.cpp
sqpnp/: CMakeLists.txt  sqpnp.cpp
sqpnp/include/sqpnp/: sqpnp.h  types.h
